fix: remove old indicted objects from original group in GroupNode